GMM_Main/src/objects/Team_Assignment__c.object
<CustomObject>
    <description>Junction Object Between Award and Teams.</description>
    <fields>
        <fullName>Applicant_Email__c</fullName>
        <description>req #1104</description>
        <label>Applicant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Applicant_Name__c</fullName>
        <formula>Award__r.Application_ID__r.Authorized_Representative__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award_PO__c</fullName>
        <formula>Award__r.PO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Award PO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Award__c</fullName>
        <description>MD relation with Award.</description>
        <label>Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>Team Assignments</relationshipLabel>
        <relationshipName>Team_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Campus_Arrival_Date__c</fullName>
        <description>The date selected must be greater than or equal to the &quot;Project Departure Date&quot; but less than or equal to “Agreement End Date” on the award record.</description>
        <label>Campus Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campus_Departure_Date__c</fullName>
        <label>Campus Departure Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Transition__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this checkbox nullifies the &quot;Campus Arrival Date&quot; field.</description>
        <label>No Transition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Members__c</fullName>
        <label>Number of Members</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Arrival_Date__c</fullName>
        <description>Date selected must be greater than or equal to the “Campus Departure Date ” for the team.</description>
        <label>Project Arrival Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Departure_Date__c</fullName>
        <description>The date selected must be greater than or equal to the &quot;Start Date&quot; but less than or equal to “Agreement End Date” on the award record.</description>
        <label>Project Departure Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Team_Name_Formula__c</fullName>
        <formula>Team_Name__r.Team_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relation to Team object. .</description>
        <label>Team Record ID</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>This Team cannot be associated to this award for the specified dates because the team is associated with a different award during that period.</errorMessage>
            <filterItems>
                <field>Team__c.Active1__c</field>
                <operation>equals</operation>
                <value>Yes</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Team Assignments</relationshipLabel>
        <relationshipName>Team_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Terminated_By__c</fullName>
        <formula>Team_Name__r.Team_Terminated_By__c</formula>
        <label>Team Terminated By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Type__c</fullName>
        <label>Team Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fire Fighting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Composite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red Cross</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>hidden_number__c</fullName>
        <label>hiddenNumber</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Team Assignment</label>
    <nameField>
        <displayFormat>TA-{00000000}</displayFormat>
        <label>Team Assignment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Campus_Arrival_Date_1</fullName>
        <active>true</active>
        <description>Date selected must be greater than or equal to the &quot;Project Departure Date&quot;</description>
        <errorConditionFormula>Campus_Arrival_Date__c &lt;   Project_Departure_Date__c</errorConditionFormula>
        <errorDisplayField>Campus_Arrival_Date__c</errorDisplayField>
        <errorMessage>Date selected must be greater than or equal to the &quot;Project Departure Date&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Campus_Arrival_Date_2</fullName>
        <active>true</active>
        <description>Date selected less than or equal to “Agreement End Date” on the award record.</description>
        <errorConditionFormula>Campus_Arrival_Date__c &gt; Award__r.Agreement_Period_End_Date__c</errorConditionFormula>
        <errorDisplayField>Campus_Arrival_Date__c</errorDisplayField>
        <errorMessage>Date should be less than or equal to “Agreement End Date” on the award record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Campus_Departure_Date</fullName>
        <active>true</active>
        <description>Date selected must be greater than or equal to the “Agreement Start Date” on the award record.</description>
        <errorConditionFormula>Campus_Departure_Date__c  &lt; Award__r.Agreement_Period_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Campus_Departure_Date__c</errorDisplayField>
        <errorMessage>Date selected must be greater than or equal to the “Agreement Start Date” on the award record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Transition_Campus_Arrival_Date</fullName>
        <active>true</active>
        <description>If the No Transition checkbox is checked, a Campus Arrival Date should not be entered.</description>
        <errorConditionFormula>AND(No_Transition__c = True,   NOT(ISNULL(Campus_Arrival_Date__c) ))</errorConditionFormula>
        <errorDisplayField>Campus_Arrival_Date__c</errorDisplayField>
        <errorMessage>Campus Arrival Date should not be entered if No Transition is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_Arrival_Date</fullName>
        <active>true</active>
        <description>Date selected must be greater than or equal to the “Campus Departure Date ” for the team.</description>
        <errorConditionFormula>Project_Arrival_Date__c &lt;  Campus_Departure_Date__c</errorConditionFormula>
        <errorDisplayField>Project_Arrival_Date__c</errorDisplayField>
        <errorMessage>Date must be Greater than or equal to Campus Departure Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_Departure_Date_1</fullName>
        <active>true</active>
        <description>Date selected must be greater than or equal to the &quot;Agreement Start Date&quot;.</description>
        <errorConditionFormula>Project_Departure_Date__c &lt;  Award__r.Project_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Project_Departure_Date__c</errorDisplayField>
        <errorMessage>Date must be Greater than or equal to Agreement Start Date on Award record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_Departure_Date_2</fullName>
        <active>true</active>
        <description>Date selected must be less than or equal to the &quot;Agreement End Date&quot;.</description>
        <errorConditionFormula>AND( No_Transition__c = True, 
Project_Departure_Date__c &gt;  Award__r.Agreement_Period_End_Date__c)</errorConditionFormula>
        <errorDisplayField>Project_Departure_Date__c</errorDisplayField>
        <errorMessage>Date must be Less than or equal to Agreement End Date on Award record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Project_Departure_Date_3</fullName>
        <active>true</active>
        <description>Date entered in the Project Departure Date must be greater than or equal to the Project Arrival Date.</description>
        <errorConditionFormula>Project_Departure_Date__c &lt; Project_Arrival_Date__c</errorConditionFormula>
        <errorDisplayField>Project_Departure_Date__c</errorDisplayField>
        <errorMessage>Project Departure Date must be greater than or equal to the Project Arrival Date.</errorMessage>
    </validationRules>
</CustomObject>